--- a/src/index.html
+++ b/src/index.html
@@ -227,13 +227,35 @@
   .container {
     padding-top: 20px;
   }
+  
+  .rTable {
+    display: table;
+  }
+  
+  .rTableRow {
+    display: table-row;
+  }
+  
+  .rTableHeading {
+    display: table-header-group;
+  }
+  
+  .rTableBody {
+    display: table-row-group;
+  }
+  
+  .rTableFoot {
+    display: table-footer-group;
+  }
+  
+  .rTableCell,
+  .rTableHead {
+    display: table-cell;
+  }
 </style>
 </head>
 
 <body>
-
-
-
 
   <div class="bs-docs-header" id="content" tabindex="-1">
     <div class="container">
